--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <span id="totalTrades">0</span>
       </div>
       <div class="stat-box">
-        <h3>Win Trade ✅</h3>
+        <h3>Win Trade</h3>
         <span id="winTrades">0</span>
       </div>
       <div class="stat-box">
-        <h3>Loss Trade ❌</h3>
+        <h3>Loss Trade</h3>
         <span id="lossTrades">0</span>
       </div>
       <div class="stat-box">
