--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 <body>
   <div id="accessContainer">
     <h2>🔒 Masukkan Kode Akses</h2>
-    <input type="text" id="accessCodeInput" placeholder="Masukan Kode Akses)" />
+    <input type="password" id="accessCodeInput" placeholder="Masukan Kode Akses" />
     <button onclick="checkAccess()">Masuk</button>
     <div id="accessMessage"></div>
   </div>
