--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 // Data & Users
 const users = {
   "4ND1": { username: "Andi", initialBalance: 100.00 },
-  "R1SKY": { username: "Kyy Official", initialBalance: 10USD },
-  "VL": { username: "VICKY", initialBalance: 1250USDc },
+  "R1SKY": { username: "Kyy Official", initialBalance: 10 },
+  "VL": { username: "VICKY", initialBalance: 1250 },
   "DEMO": { username: "DEMO", initialBalance: 10000.00 }
 };
 let currentUser=null;
